--- a/index 1 .html
+++ b/index 1 .html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
-<title> natural beauty</title>
-</head>
-<body>
-<h1><center><b> the natural beauty gallery</b></center></h1>
-<p>every woman is beutifull with their own skin tone and natural hair no matter how kinky and afro it is ,this site is to help women know how to stylw their hair,products to keep one own skin glowing and how to wear for any occasition</p>
-<ol>
-<li><a href " hair.html">hair</a></li>
-<li><a href "manicure.html">manicure and pedicure</a></li>
-<li><a href " face care.html">face care</a></li>
-<li><a href "clothing">clothing</a></li>
-<li><a href "about us">about us </a></li>
 
-</ol>
+<head>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Open+Sans" rel="stylesheet">
+    
+    <ul>
+        <li><a class="active" href="index%201%20.html">Home</a></li>
+        <li><a href="hair.html">Hair</a></li>
+        <li><a href="manicure.html">Manicure</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="clothing.html">Clothing</a></li>
+        <li><a href="face_care.html">Face Care</a></li>
+    </ul>
+
+    <title> Natural Beauty</title>
+</head>
+
+<body>
+    <h1>
+        <center><b>The Natural Beauty</b></center>
+    </h1>
+    <img src="Assets/Image/woman.jpg" heght=20px wedth=30px>
+    <div id="pra">
+        <p class="solid">Every woman is beutifull with their own skin tone and natural hair no matter how kinky and afro it is ,this site is to help women know how to style their hair,products to keep one own skin glowing and how to wear for any occasition</p>
+    </div>
+
 </body>
+
 </html>
